# vip--video-image-processor

./: .env.example  .gitignore  LICENSE  README.md  architecture.md  pyproject.toml
app/: config.py  main.py
app/api/: config.py  faces.py  plates.py  recording.py  stream.py  streams.py  zones.py
app/processors/: base.py  detection.py  faces.py  motion.py  plates.py  zones.py
app/services/: database.py  face_store.py  notifications.py  recording.py
app/static/: index.html
app/static/css/: app.css
app/static/js/: controls.js  notifications.js  stream.js  zone_editor.js
app/stream/: pipeline.py  reader.py  registry.py  websocket_manager.py
tests/: 01_test_camera_stream.md  02_test_access_opencv.py  test_plates.py
