[project]
name = "vip-video-image-processor"
version = "0.1.0"
description = "Video stream visualizer with real-time computer vision features"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "opencv-python-headless>=4.9",
    "pydantic-settings>=2.2",
    "aiosqlite>=0.20",
    "aiosmtplib>=3.0",
    "python-dotenv>=1.0",
    "ultralytics>=8.1",
    "deepface>=0.0.93",
    "tf-keras>=2.21.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
